<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.areva.trainingnfc.updateLogin"
    tools:ignore="MergeRootFrame" >
        <!-- 
    Det här är vår XML-Fil för att hantera uppdatering utav profilen.
    Nedan följer de vyer som vi använder oss utav och dess attribut.
    I detta fall använder vi oss utav en TableLayout för att skapa vår strukturerade layout
     -->
  <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="50dp" >

            <TextView
                android:id="@+id/txtUpdateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/updateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>


        </TableRow>

			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dip"
			    android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/txtupdateWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/weight"
                android:textAppearance="?android:attr/textAppearanceMedium"></TextView>

            <EditText
                android:id="@+id/updateWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:inputType="numberSigned" >
            </EditText>

        </TableRow>
			<View
    			android:layout_width="fill_parent"
    			android:layout_height="1dip"
    			android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/txtupdateLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/length"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/updateLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:inputType="numberSigned" />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/txtupdateEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/updateEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" >

            
            </EditText>

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/txtupdateGym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/homegym"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/updateGym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10">

            
            </EditText>
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateProfile"
            android:background="#e5e5e5"
            android:text="@string/updateProfile" />

    </TableLayout>
    </FrameLayout>