<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.areva.trainingnfc.Profile"
    tools:ignore="MergeRootFrame" >
    <!-- 
    Det här är vår XML-Fil för att hantera vår profil.
    Nedan följer de vyer som vi använder oss utav och dess attribut.
    I detta fall använder vi oss utav en TableLayout för att skapa vår strukturerade layout
     -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="75dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/noData"
                android:textColor="#AA66CC"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dip"
			    android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/weight"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/noData"
                android:textColor="#AA66CC"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>
			<View
    			android:layout_width="fill_parent"
    			android:layout_height="1dip"
    			android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/length"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/noData"
                android:textColor="#AA66CC"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/noData"
                android:textColor="#AA66CC"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/homegym"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtGym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/noData"
                android:textColor="#AA66CC"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ddd" />

    </TableLayout>

</FrameLayout>
